--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="css/community.css">
+    <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -15,32 +17,12 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Community</span>
-                <!--                <span class="icon-bar"></span>-->
-                <!--                <span class="icon-bar"></span>-->
-                <!--                <span class="icon-bar"></span>-->
             </button>
-            <a class="navbar-brand" href="#">Community</a>
+            <a class="navbar-brand" href="/">Community</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <!--            <ul class="nav navbar-nav">-->
-            <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
-            <!--                <li><a href="#">Link</a></li>-->
-            <!--                <li class="dropdown">-->
-            <!--                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"-->
-            <!--                       aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-            <!--                    <ul class="dropdown-menu">-->
-            <!--                        <li><a href="#">Action</a></li>-->
-            <!--                        <li><a href="#">Another action</a></li>-->
-            <!--                        <li><a href="#">Something else here</a></li>-->
-            <!--                        <li role="separator" class="divider"></li>-->
-            <!--                        <li><a href="#">Separated link</a></li>-->
-            <!--                        <li role="separator" class="divider"></li>-->
-            <!--                        <li><a href="#">One more separated link</a></li>-->
-            <!--                    </ul>-->
-            <!--                </li>-->
-            <!--            </ul>-->
             <form class="navbar-form navbar-left">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="搜索问题">
@@ -54,13 +36,11 @@
 
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getId()}"><span class="caret"></span></a>
+                       aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
-                        <!--                        <li role="separator" class="divider"></li>-->
-                        <!--                        <li><a href="#">Separated link</a></li>-->
                     </ul>
                 </li>
                 <li th:if="${session.user == null}">
@@ -70,5 +50,35 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <hr>
+            <div class="media" th:each="question:${questions}">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                    <span th:text="${question.getDescription()}"></span><br>
+                    <span class="text-desc">
+                        <span th:text="${question.getCommentCount()}">
+                        </span>个回复 &bull;
+                        <span th:text="${question.getViewCount()}">
+                        </span>次浏览 &bull;
+                        <span th:text="${#dates.format(question.getGmtCreate(),'dd MMMM yyyy')}">
+                        </span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>热门话题</h3>
+        </div>
+    </div>
+</div>
 </body>
 </html>
