--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -20,7 +20,7 @@
                 <!--                <span class="icon-bar"></span>-->
                 <!--                <span class="icon-bar"></span>-->
             </button>
-            <a class="navbar-brand" href="#">Community</a>
+            <a class="navbar-brand" href="/">Community</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,7 +55,7 @@
 
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getId()}"><span class="caret"></span></a>
+                       aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
