--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/community.css">
 </head>
 <body style="background: #efefef">
+<!--导航条-->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -71,8 +72,10 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<!--内容-->
 <div class="container-fluid main">
     <div class="row">
+<!--        内容左-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h2>
             <hr>
@@ -84,7 +87,7 @@
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填，请参照右侧提示）：</label>
-                    <textarea name="description" th:value="${description}" id="description" class="form-control"
+                    <textarea name="description" th:text="${description}" id="description" class="form-control"
                               cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
@@ -94,15 +97,19 @@
                 </div>
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
-                             th:if="${error!=null}"></div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-1">
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                            <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
+                                 th:if="${error!=null}">
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <button type="submit" class="btn btn-success btn-publish">发布</button>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
+<!--        内容右-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
             * 问题标题：请尽量简单扼要的描述你的问题，以便其他人能够快速的找到你的问题。<br>
