完成了评论功能的接口，问题页面没有调试完，增加了mybatiscodehelper，修改了数据库的一些设计错误，（真的前期设计不要出错啊），增加了退出登录，拦截器检测登录。

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -22,3 +22,25 @@ body {
     font-weight: normal;
     color: #999;
 }
+
+/*z轴效果*/
+.z {
+    box-shadow: 0 0 10px #a8a8a8;
+}
+
+.profile .section {
+    margin-top: 15px;
+}
+
+.profile .wrap {
+    vertical-align: middle;
+}
+
+.wrap {
+    vertical-align: middle;
+}
+
+.community-menu {
+    color: #999;
+    font-size: 13px;
+}
