--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,25 +2,24 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Community</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/jquery-3.6.3.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
-    <link rel="stylesheet" href="css/community.css">
+    <title th:text="${sectionName}"></title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <script src="/js/jquery-3.6.3.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/community.css">
     <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
 </head>
 <body>
 <!--导航条-->
 <div th:insert="~{navigation :: nav}"></div>
-<!--内容-->
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row z">
         <!--        左边-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2>
-                <span class="glyphicon glyphicon-list wrap" aria-hidden="true"></span>
-                <span class="wrap" th:text="发现"></span>
+                <span th:class="'glyphicon glyphicon-'+${sign}+' wrap'" aria-hidden="true"></span>
+                <span th:text="${sectionName}" th:class="wrap"></span>
             </h2>
             <hr>
             <div class="media" th:each="question:${pagination.questions}">
@@ -30,17 +29,13 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading">
-                        <a th:href="@{/question/{id}(id=${question.getId()})}" th:text="${question.getTitle()}"></a>
-                    </h4>
-                    <span th:text="${question.getDescription()}"></span><br>
+                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
                     <span class="text-desc">
                         <span th:text="${question.getCommentCount()}">
                         </span>个回复 &bull;
                         <span th:text="${question.getViewCount()}">
                         </span>次浏览 &bull;
-                        <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}">
-                        </span>
+                        <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}"></span>
                     </span>
                 </div>
             </div>
@@ -53,15 +48,15 @@
                         </a>
                     </li>
                     <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{/(page=${pagination.page}-1)}" aria-label="Previous">
+                        <a th:href="'?'+'page='+${pagination.getPage()-1}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="'?page='+${page}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pagination.showNext}">
-                        <a th:href="@{/(page=${pagination.page}+1)}" aria-label="Next">
+                        <a th:href="'?'+'page='+${pagination.page+1}" aria-label="Next">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
@@ -75,10 +70,17 @@
         </div>
         <!--        右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>
-                <span class="glyphicon glyphicon-fire wrap" aria-hidden="true"></span>
-                <span class="wrap" th:text="热门话题"></span>
-            </h3>
+            <div class="list-group section z">
+                <a href="/profile/questions" th:class="'list-group-item '+${section=='questions'?'active ':''}">
+                    <span class="glyphicon glyphicon-question-sign wrap" aria-hidden="true"></span>
+                    <span th:text="${'我的提问'}" th:class="'wrap'"></span>
+                </a>
+                <a href="/profile/replies" th:class="'list-group-item '+${section=='replies'?'active ':''}">
+                    <span class="glyphicon glyphicon-comment wrap" aria-hidden="true"></span>
+                    <span th:text="${'最新回复'}" th:class="'wrap'"></span>
+                    <span class="badge wrap">14</span>
+                </a>
+            </div>
         </div>
     </div>
 </div>
