--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,81 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Publish</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <script src="/js/jquery-3.6.3.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <link rel="stylesheet" href="/css/community.css">
+    <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
 </head>
 <body style="background: #efefef">
 <!--导航条-->
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Community</span>
-                <!--                <span class="icon-bar"></span>-->
-                <!--                <span class="icon-bar"></span>-->
-                <!--                <span class="icon-bar"></span>-->
-            </button>
-            <a class="navbar-brand" href="/">Community</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <!--            <ul class="nav navbar-nav">-->
-            <!--                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
-            <!--                <li><a href="#">Link</a></li>-->
-            <!--                <li class="dropdown">-->
-            <!--                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"-->
-            <!--                       aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-            <!--                    <ul class="dropdown-menu">-->
-            <!--                        <li><a href="#">Action</a></li>-->
-            <!--                        <li><a href="#">Another action</a></li>-->
-            <!--                        <li><a href="#">Something else here</a></li>-->
-            <!--                        <li role="separator" class="divider"></li>-->
-            <!--                        <li><a href="#">Separated link</a></li>-->
-            <!--                        <li role="separator" class="divider"></li>-->
-            <!--                        <li><a href="#">One more separated link</a></li>-->
-            <!--                    </ul>-->
-            <!--                </li>-->
-            <!--            </ul>-->
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user != null}">
-                    <a href="/publish">发布</a>
-                </li>
-
-                <li class="dropdown" th:if="${session.user != null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                        <!--                        <li role="separator" class="divider"></li>-->
-                        <!--                        <li><a href="#">Separated link</a></li>-->
-                    </ul>
-                </li>
-                <li th:if="${session.user == null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=1a24c2ecdddf6a7ff7c2&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<div th:insert="~{navigation :: nav}"></div>
 <!--内容-->
 <div class="container-fluid main">
-    <div class="row">
-<!--        内容左-->
+    <div class="row z">
+        <!--        内容左-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 发起</h2>
+            <h2><span class="glyphicon glyphicon-plus wrap" aria-hidden="true"></span>
+                <span class="wrap" th:text="发布问题"></span>
+            </h2>
             <hr>
             <form action="/publish" method="post">
                 <div class="form-group">
@@ -109,12 +52,16 @@
                 </div>
             </form>
         </div>
-<!--        内容右-->
+        <!--        内容右-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>问题发起指南</h3>
-            * 问题标题：请尽量简单扼要的描述你的问题，以便其他人能够快速的找到你的问题。<br>
-            * 问题补充：请尽量详细的描述你的问题，以便其他人能够快速的找到你的问题。<br>
-            * 添加标签：请尽量添加相关的标签，以便其他人能够快速的找到你的问题。<br>
+            <h3>
+                <span class="glyphicon glyphicon-exclamation-sign wrap" aria-hidden="true"></span>
+                <span class="wrap" th:text="问题发起指南"></span>
+            </h3>
+            <br>
+            • 问题标题：请尽量简单扼要的描述你的问题，以便其他人能够快速地找到你的问题。<br><br>
+            • 问题补充：请尽量详细的描述你的问题，以便其他人能够快速地找到你的问题。<br><br>
+            • 添加标签：请尽量添加相关的标签，以便其他人能够快速地找到你的问题。<br><br>
         </div>
     </div>
 </div>
