--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="css/community.css">
     <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
 </head>
+<script type="application/javascript">
+    window.onload = function () {
+        var closeable = window.localStorage.getItem("closeable");
+        if (closeable == "true") {
+            window.close();
+            window.localStorage.removeItem("closeable");
+        }
+    }
+</script>
 <body>
 <!--导航条-->
 <div th:insert="~{navigation :: nav}"></div>
