--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -9,6 +9,7 @@
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <link rel="stylesheet" href="/css/community.css">
     <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <!--导航条-->
@@ -17,11 +18,12 @@
     <div class="row z">
         <!--        左边-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h4>
-                <span class="glyphicon glyphicon-question-sign wrap" aria-hidden="true"></span>
-                <span th:text="${question.getTitle()}" th:class="wrap"></span>
-            </h4>
-            <span class="text-desc">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    <span class="glyphicon glyphicon-question-sign wrap" aria-hidden="true"></span>
+                    <span th:text="${question.getTitle()}" th:class="wrap"></span>
+                </h4>
+                <span class="text-desc">
                 <span class="glyphicon glyphicon-user wrap" aria-hidden="true"></span>
                 <span class="wrap">作者：</span>
                 <span class="wrap" th:text="${question.user.getName()}"></span>
@@ -33,85 +35,91 @@
                 <span class="glyphicon glyphicon-eye-open wrap" aria-hidden="true"></span>
                 <span class="wrap">阅读数：</span>
                 <span class="wrap" th:text="${question.viewCount}"></span>
-            </span>
+                </span>
 
-            <hr>
+                <hr>
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
-                <span th:text="${question.description}"></span>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
+                    <span th:text="${question.description}"></span>
+                </div>
+
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <br>
+                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                   th:if="${session.user != null && session.user.getAccountId() == question.creator}">
+                    <span class="glyphicon glyphicon-pencil wrap" aria-hidden="true"></span>
+                    <span th:text="'编辑'" class="wrap"></span>
+                </a>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             </div>
+<!--            回复输入框-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                <textarea class="form-control" rows="3"></textarea>-->
+<!--            </div>-->
 
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <br>
-            <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-               th:if="${session.user != null && session.user.getAccountId() == question.creator}">
-                <span class="glyphicon glyphicon-pencil wrap" aria-hidden="true"></span>
-                <span th:text="'编辑'" class="wrap"></span>
-            </a>
+<!--            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
 
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header"
-                 th:if="${!#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('HEADER'))}"
-                 th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('HEADER')}">
-                <a th:href="${ad.url}" th:text="${ad.title}" target="_blank"
-                   style="color: #A00;font-weight: bold;"></a>
-                <img src="/images/hot.png"/>
-            </div>
-
-
-            <!--内容-->
-<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">-->
-<!--                <span th:text="${question.description}"></span>-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 top-header"-->
+<!--                 th:if="${!#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('HEADER'))}"-->
+<!--                 th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('HEADER')}">-->
+<!--                <a th:href="${ad.url}" th:text="${ad.title}" target="_blank"-->
+<!--                   style="color: #A00;font-weight: bold;"></a>-->
+<!--                <img src="/images/hot.png"/>-->
 <!--            </div>-->
 
 
-            <script type="text/javascript">
-                $(function () {
-                    editormd.markdownToHTML("question-view", {});
-                });
-            </script>
+            <!--内容-->
+            <!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">-->
+            <!--                <span th:text="${question.description}"></span>-->
+            <!--            </div>-->
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
-                 th:if="${!#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('FOOTER'))}"
-                 th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('FOOTER')}">
-                <a th:href="${ad.url}" th:text="${ad.title}" target="_blank"
-                   style="color: #A00;font-weight: bold;"></a>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="width: 100%;"
-                 th:if="${#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('FOOTER'))}">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- 页尾广告 -->
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-9804684553882114"
-                     data-ad-slot="4772323686"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
+
+<!--            <script type="text/javascript">-->
+<!--                $(function () {-->
+<!--                    editormd.markdownToHTML("question-view", {});-->
+<!--                });-->
+<!--            </script>-->
+
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"-->
+<!--                 th:if="${!#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('FOOTER'))}"-->
+<!--                 th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('FOOTER')}">-->
+<!--                <a th:href="${ad.url}" th:text="${ad.title}" target="_blank"-->
+<!--                   style="color: #A00;font-weight: bold;"></a>-->
+<!--            </div>-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="width: 100%;"-->
+<!--                 th:if="${#lists.isEmpty(#httpServletRequest.getServletContext().getAttribute('FOOTER'))}">-->
+<!--                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--                &lt;!&ndash; 页尾广告 &ndash;&gt;-->
+<!--                <ins class="adsbygoogle"-->
+<!--                     style="display:block"-->
+<!--                     data-ad-client="ca-pub-9804684553882114"-->
+<!--                     data-ad-slot="4772323686"-->
+<!--                     data-ad-format="auto"-->
+<!--                     data-full-width-responsive="true"></ins>-->
+<!--                <script>-->
+<!--                    (adsbygoogle = window.adsbygoogle || []).push({});-->
+<!--                </script>-->
+<!--            </div>-->
 
             <!--标签-->
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <span class="question-tag" th:each="tag : ${question.tag.split(',')}">
-                        <a th:href="@{/(page=1,tag=${tag})}"
-                           th:text="${tag}" class="community-tag"></a>
-                    </span>
-            </div>
+<!--            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                    <span class="question-tag" th:each="tag : ${question.tag.split(',')}">-->
+<!--                        <a th:href="@{/(page=1,tag=${tag})}"-->
+<!--                           th:text="${tag}" class="community-tag"></a>-->
+<!--                    </span>-->
+<!--            </div>-->
 
 
-            <!--编辑-->
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
-                   th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
-                </a>
-            </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<!--            &lt;!&ndash;编辑&ndash;&gt;-->
+<!--            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+<!--                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"-->
+<!--                   th:if="${session.user != null && session.user.id == question.creator}">-->
+<!--                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
             <!--回复-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>
@@ -132,13 +140,13 @@
                             </h5>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
-                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span class="glyphicon glyphicon-thumbs-up icon wrap"></span>
                                 <span th:data-id="${comment.id}"
-                                      onclick="collapseComments(this)" class="comment-icon">
-                                    <span class="glyphicon glyphicon-comment"></span>
-                                    <span th:text="${comment.commentCount}"></span>
+                                      onclick="collapseComments(this)" class="comment-icon wrap">
+                                    <span class="glyphicon glyphicon-comment wrap"></span>
+<!--                                    <span th:text="${comment.commentCount}" class="wrap"></span>-->
                                 </span>
-                                <span class="pull-right"
+                                <span class="pull-right wrap"
                                       th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
                             </div>
                             <!--二级评论-->
