更新了回复通知功能

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Community</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/jquery-3.6.3.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
-    <link rel="stylesheet" href="css/community.css">
-    <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
-</head>
-<script type="application/javascript">
-    window.onload = function () {
-        var closeable = window.localStorage.getItem("closeable");
-        if (closeable == "true") {
-            window.close();
-            window.localStorage.removeItem("closeable");
+    <head>
+        <meta charset="UTF-8">
+        <title>Community</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/bootstrap.min.js" type="application/javascript"></script>
+        <link rel="stylesheet" href="css/community.css">
+        <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+    </head>
+    <script type="application/javascript">
+        window.onload = function () {
+            var closeable = window.localStorage.getItem("closeable");
+            if (closeable == "true") {
+                window.close();
+                window.localStorage.removeItem("closeable");
+            }
         }
-    }
-</script>
-<body>
-<!--导航条-->
-<div th:insert="~{navigation :: nav}"></div>
-<!--内容-->
-<div class="container-fluid main">
-    <div class="row z">
-        <!--        左边-->
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2>
-                <span class="glyphicon glyphicon-list wrap" aria-hidden="true"></span>
-                <span class="wrap" th:text="发现"></span>
-            </h2>
-            <hr>
-            <div class="media" th:each="question:${pagination.questions}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        <a th:href="@{/question/{id}(id=${question.getId()})}" th:text="${question.getTitle()}"></a>
-                    </h4>
-                    <span th:text="${question.getDescription()}"></span><br>
-                    <span class="text-desc">
+    </script>
+    <body>
+        <!--导航条-->
+        <div th:insert="~{navigation :: nav}"></div>
+        <!--内容-->
+        <div class="container-fluid main">
+            <div class="row z">
+                <!--        左边-->
+                <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                    <h2>
+                        <span class="glyphicon glyphicon-list wrap" aria-hidden="true"></span>
+                        <span class="wrap" th:text="发现"></span>
+                    </h2>
+                    <hr>
+                    <div class="media" th:each="question:${pagination.getData}">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <a th:href="@{/question/{id}(id=${question.getId()})}"
+                                   th:text="${question.getTitle()}"></a>
+                            </h4>
+                            <span th:text="${question.getDescription()}"></span><br>
+                            <span class="text-desc">
                         <span th:text="${question.getCommentCount()}">
                         </span>个回复 &bull;
                         <span th:text="${question.getViewCount()}">
@@ -51,45 +52,45 @@
                         <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}">
                         </span>
                     </span>
+                        </div>
+                    </div>
+                    <nav aria-label="Page navigation" th:align="center"
+                         th:if="${pagination.getTotalPage()>1}">
+                        <ul class="pagination">
+                            <li th:if="${pagination.showFirstPage}">
+                                <a href="?page=1" aria-label="StartPage">
+                                    <span aria-hidden="true">&lt;&lt;</span>
+                                </a>
+                            </li>
+                            <li th:if="${pagination.showPrevious}">
+                                <a th:href="@{/(page=${pagination.page}-1)}" aria-label="Previous">
+                                    <span aria-hidden="true">&lt;</span>
+                                </a>
+                            </li>
+                            <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
+                                <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                            </li>
+                            <li th:if="${pagination.showNext}">
+                                <a th:href="@{/(page=${pagination.page}+1)}" aria-label="Next">
+                                    <span aria-hidden="true">&gt;</span>
+                                </a>
+                            </li>
+                            <li th:if="${pagination.showEndPage}">
+                                <a th:href="'?'+'page='+${pagination.totalPage}" aria-label="LastPage">
+                                    <span aria-hidden="true">&gt;&gt;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <!--        右边-->
+                <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                    <h3>
+                        <span class="glyphicon glyphicon-fire wrap" aria-hidden="true"></span>
+                        <span class="wrap" th:text="热门话题"></span>
+                    </h3>
                 </div>
             </div>
-            <nav aria-label="Page navigation" th:align="center"
-                 th:if="${pagination.getTotalPage()>1}">
-                <ul class="pagination">
-                    <li th:if="${pagination.showFirstPage}">
-                        <a href="?page=1" aria-label="StartPage">
-                            <span aria-hidden="true">&lt;&lt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{/(page=${pagination.page}-1)}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                        </a>
-                    </li>
-                    <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
-                    </li>
-                    <li th:if="${pagination.showNext}">
-                        <a th:href="@{/(page=${pagination.page}+1)}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showEndPage}">
-                        <a th:href="'?'+'page='+${pagination.totalPage}" aria-label="LastPage">
-                            <span aria-hidden="true">&gt;&gt;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
-        <!--        右边-->
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>
-                <span class="glyphicon glyphicon-fire wrap" aria-hidden="true"></span>
-                <span class="wrap" th:text="热门话题"></span>
-            </h3>
-        </div>
-    </div>
-</div>
-</body>
+    </body>
 </html>
