--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Community</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <script src="js/jquery-3.6.3.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
-    <link rel="stylesheet" href="css/community.css">
-    <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
-</head>
-<body>
-<!--导航条-->
-<nav class="navbar navbar-default z">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Community</span>
-            </button>
-            <a class="navbar-brand" href="/">Community</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
+    <head>
+        <meta charset="UTF-8">
+        <title>Community</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/bootstrap.min.js" type="application/javascript"></script>
+        <link rel="stylesheet" href="css/community.css">
+        <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+    </head>
+    <body>
+        <!--导航条-->
+        <nav class="navbar navbar-default z">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Community</span>
+                    </button>
+                    <a class="navbar-brand" href="/">Community</a>
                 </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user != null&&#httpServletRequest.getRequestURI()!='/publish'}">
-                    <a href="/publish">提问</a>
-                </li>
 
-                <li class="dropdown" th:if="${session.user != null}">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="搜索问题">
+                        </div>
+                        <button type="submit" class="btn btn-default">搜索</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li th:if="${session.user != null&&#httpServletRequest.getRequestURI()!='/publish'}">
+                            <a href="/publish">提问</a>
+                        </li>
+                        <li>
+                            <a href="/profile/replies" class="wrap">通知 <span class="badge"
+                                                                             th:if="${session.user != null}"
+                                                                             th:text="${session.unreadCount}"></span></a>
+                        </li>
+                        <li class="dropdown" th:if="${session.user != null}">
 
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">
-                        <span th:text="${session.user.getName()}"></span>
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/profile/questions">我的问题</a></li>
-                        <!--                        <li><a href="#">个人资料</a></li>-->
-                        <li><a href="/logout">退出登录</a></li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true"
+                               aria-expanded="false">
+                                <span th:text="${session.user.getName()}"></span>
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/profile/questions">我的问题</a></li>
+                                <!--                        <li><a href="#">个人资料</a></li>-->
+                                <li><a href="/logout">退出登录</a></li>
+                            </ul>
+                        </li>
+                        <li th:if="${session.user == null}">
+                            <a href="https://github.com/login/oauth/authorize?client_id=1a24c2ecdddf6a7ff7c2&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                        </li>
                     </ul>
-                </li>
-                <li th:if="${session.user == null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=1a24c2ecdddf6a7ff7c2&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-</body>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+    </body>
 </html>
