--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,88 +1,115 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="${sectionName}"></title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <script src="/js/jquery-3.6.3.min.js"></script>
-    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
-    <link rel="stylesheet" href="/css/community.css">
-    <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
-</head>
-<body>
-<!--导航条-->
-<div th:insert="~{navigation :: nav}"></div>
-<div class="container-fluid main profile">
-    <div class="row z">
-        <!--        左边-->
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2>
-                <span th:class="'glyphicon glyphicon-'+${sign}+' wrap'" aria-hidden="true"></span>
-                <span th:text="${sectionName}" th:class="wrap"></span>
-            </h2>
-            <hr>
-            <div class="media" th:each="question:${pagination.questions}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
-                    </a>
+    <head>
+        <meta charset="UTF-8">
+        <title th:text="${sectionName}"></title>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+        <script src="/js/jquery-3.6.3.min.js"></script>
+        <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+        <link rel="stylesheet" href="/css/community.css">
+        <script src="https://cdn.bootcss.com/holder/2.9.4/holder.min.js"></script>
+    </head>
+    <body>
+        <!--导航条-->
+        <div th:insert="~{navigation :: nav}"></div>
+        <div class="container-fluid main profile">
+            <div class="row z">
+                <!--        左边-->
+                <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                    <h2>
+                        <span th:class="'glyphicon glyphicon-'+${sign}+' wrap'" aria-hidden="true"></span>
+                        <span th:text="${sectionName}" th:class="wrap"></span>
+                    </h2>
+                    <hr>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
+                        <div class="media" th:each="question:${pagination.getData}">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">
+                                    <a th:href="@{/question/{id}(id=${question.getId()})}"
+                                       th:text="${question.getTitle()}"></a>
+                                </h4>
+                                <span class="text-desc">
+                                    <span th:text="${question.getCommentCount()}">
+                                    </span>个回复 &bull;
+                                    <span th:text="${question.getViewCount()}">
+                                    </span>次浏览 &bull;
+                                    <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}"></span>
+                                    <a th:href="@{'/publish/'+${question.id}}"
+                                       class="text-desc"
+                                       th:if="${session.user != null && session.user.getAccountId() == question.creator}">
+                                        <span>&bull; </span>
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        <span>编辑</span>
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}">
+                        <div class="media" th:each="notification : ${pagination.getData()}">
+                            <div class="media-body">
+                                <p class="media-heading">
+                                    <span th:text="${notification.notifierName +' ' + notification.getTypeName + ' '}"></span>
+                                    <a th:href="@{/notification/{id}(id=${notification.id})}"
+                                       th:text="${notification.outerTitle}">
+                                    </a>
+                                    <span class="label label-danger" th:if="${notification.status == 0}">未读</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <nav aria-label="Page navigation" th:align="center"
+                             th:if="${pagination.getTotalPage()>1}">
+                            <ul class="pagination">
+                                <li th:if="${pagination.showFirstPage}">
+                                    <a href="?page=1" aria-label="StartPage">
+                                        <span aria-hidden="true">&lt;&lt;</span>
+                                    </a>
+                                </li>
+                                <li th:if="${pagination.showPrevious}">
+                                    <a th:href="'?'+'page='+${pagination.getPage()-1}" aria-label="Previous">
+                                        <span aria-hidden="true">&lt;</span>
+                                    </a>
+                                </li>
+                                <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
+                                    <a th:href="'?page='+${page}" th:text="${page}"></a>
+                                </li>
+                                <li th:if="${pagination.showNext}">
+                                    <a th:href="'?'+'page='+${pagination.page+1}" aria-label="Next">
+                                        <span aria-hidden="true">&gt;</span>
+                                    </a>
+                                </li>
+                                <li th:if="${pagination.showEndPage}">
+                                    <a th:href="'?'+'page='+${pagination.totalPage}" aria-label="LastPage">
+                                        <span aria-hidden="true">&gt;&gt;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
-                    <span class="text-desc">
-                        <span th:text="${question.getCommentCount()}">
-                        </span>个回复 &bull;
-                        <span th:text="${question.getViewCount()}">
-                        </span>次浏览 &bull;
-                        <span th:text="${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}"></span>
-                    </span>
+                <!--        右边-->
+                <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                    <div class="list-group section z">
+                        <a href="/profile/questions" th:class="'list-group-item '+${section=='questions'?'active ':''}">
+                            <span class="glyphicon glyphicon-question-sign wrap" aria-hidden="true"></span>
+                            <span th:text="${'我的提问'}" th:class="'wrap'"></span>
+                        </a>
+                        <a href="/profile/replies" th:class="'list-group-item '+${section=='replies'?'active ':''}">
+                            <span class="glyphicon glyphicon-comment wrap" aria-hidden="true"></span>
+                            <span th:text="${'最新回复'}" th:class="'wrap'"></span>
+                            <span class="badge wrap" th:text="${session.unreadCount}"></span>
+                        </a>
+                    </div>
                 </div>
             </div>
-            <nav aria-label="Page navigation" th:align="center"
-                 th:if="${pagination.getTotalPage()>1}">
-                <ul class="pagination">
-                    <li th:if="${pagination.showFirstPage}">
-                        <a href="?page=1" aria-label="StartPage">
-                            <span aria-hidden="true">&lt;&lt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showPrevious}">
-                        <a th:href="'?'+'page='+${pagination.getPage()-1}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                        </a>
-                    </li>
-                    <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
-                        <a th:href="'?page='+${page}" th:text="${page}"></a>
-                    </li>
-                    <li th:if="${pagination.showNext}">
-                        <a th:href="'?'+'page='+${pagination.page+1}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                        </a>
-                    </li>
-                    <li th:if="${pagination.showEndPage}">
-                        <a th:href="'?'+'page='+${pagination.totalPage}" aria-label="LastPage">
-                            <span aria-hidden="true">&gt;&gt;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
-        <!--        右边-->
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <div class="list-group section z">
-                <a href="/profile/questions" th:class="'list-group-item '+${section=='questions'?'active ':''}">
-                    <span class="glyphicon glyphicon-question-sign wrap" aria-hidden="true"></span>
-                    <span th:text="${'我的提问'}" th:class="'wrap'"></span>
-                </a>
-                <a href="/profile/replies" th:class="'list-group-item '+${section=='replies'?'active ':''}">
-                    <span class="glyphicon glyphicon-comment wrap" aria-hidden="true"></span>
-                    <span th:text="${'最新回复'}" th:class="'wrap'"></span>
-                    <span class="badge wrap">14</span>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
+    </body>
 </html>
