--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -56,7 +56,7 @@
                 </div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <br>
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                <a th:href="@{'/publish/'+${question.id}}" class="community-menu" style="margin: 0px"
                    th:if="${session.user != null && session.user.getAccountId() == question.creator}">
                     <div style="margin-left: 15px">
                         <span class="glyphicon glyphicon-pencil wrap" aria-hidden="true"></span>
