--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,12 +38,13 @@
                                 <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
                             </a>
                         </div>
-                        <div class="media-body">
+                        <div class="media-body" style="padding: 0">
                             <h4 class="media-heading">
                                 <a th:href="@{/question/{id}(id=${question.getId()})}"
                                    th:text="${question.getTitle()}"></a>
                             </h4>
-                            <span th:text="${question.getDescription()}"></span><br>
+                            <!--                            <span th:text="${question.getDescription()}"></span>-->
+                            <!--                            <br>-->
                             <span class="text-desc">
                         <span th:text="${question.getCommentCount()}">
                         </span>个回复 &bull;
@@ -58,25 +59,25 @@
                          th:if="${pagination.getTotalPage()>1}">
                         <ul class="pagination">
                             <li th:if="${pagination.showFirstPage}">
-                                <a href="?page=1" aria-label="StartPage">
+                                <a th:href="@{/(page=1,search=${search})}" aria-label="StartPage">
                                     <span aria-hidden="true">&lt;&lt;</span>
                                 </a>
                             </li>
                             <li th:if="${pagination.showPrevious}">
-                                <a th:href="@{/(page=${pagination.page}-1)}" aria-label="Previous">
+                                <a th:href="@{/(page=${pagination.page - 1},search=${search})}" aria-label="Previous">
                                     <span aria-hidden="true">&lt;</span>
                                 </a>
                             </li>
                             <li th:each="page:${pagination.pages}" th:class="${page==pagination.page}?'active':''">
-                                <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                                <a th:href="@{/(page=${page},search=${search})}" th:text="${page}"></a>
                             </li>
                             <li th:if="${pagination.showNext}">
-                                <a th:href="@{/(page=${pagination.page}+1)}" aria-label="Next">
+                                <a th:href="@{/(page=${pagination.page +1 },search=${search})}" aria-label="Next">
                                     <span aria-hidden="true">&gt;</span>
                                 </a>
                             </li>
                             <li th:if="${pagination.showEndPage}">
-                                <a th:href="'?'+'page='+${pagination.totalPage}" aria-label="LastPage">
+                                <a th:href="@{/(page=${pagination.totalPage},search=${search})}" aria-label="LastPage">
                                     <span aria-hidden="true">&gt;&gt;</span>
                                 </a>
                             </li>
