--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -27,10 +27,25 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <form class="navbar-form navbar-left">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="搜索问题">
+                            <input type="text" class="form-control" placeholder="搜索问题" name="search">
                         </div>
                         <button type="submit" class="btn btn-default">搜索</button>
                     </form>
+                    <ul class="nav navbar-nav">
+                        <script>
+                            function clickNav(label) {
+                                gtag('event', 'click', {
+                                    'event_category': 'LINK',
+                                    'event_label': label,
+                                    'transport_type': 'NAV'
+                                })
+                            }
+                        </script>
+                        <li th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('NAV')}">
+                            <a th:href="${ad.url}" th:text="${ad.title}" th:onclick="clickNav([[${ad.title}]])"
+                               target="_blank"></a>
+                        </li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li th:if="${session.user != null&&#httpServletRequest.getRequestURI()!='/publish'}">
                             <a href="/publish">提问</a>
