--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -29,7 +29,7 @@
                                     <img class="media-object img-rounded" th:src="${question.getUser().getAvatarUrl()}">
                                 </a>
                             </div>
-                            <div class="media-body">
+                            <div class="media-body" style="padding: 0">
                                 <h4 class="media-heading">
                                     <a th:href="@{/question/{id}(id=${question.getId()})}"
                                        th:text="${question.getTitle()}"></a>
