--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -261,6 +261,6 @@
 
         </div>
         </div>
-        <!--<div th:insert="~{footer :: foot}"></div>-->
+        <div th:insert="~{footer :: foot}"></div>
     </body>
 </html>
