--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -18,7 +18,7 @@
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                             data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Community</span>
+                        <span class="sr-only wrap">Community</span>
                     </button>
                     <a class="navbar-brand" href="/">Community</a>
                 </div>
@@ -27,9 +27,9 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <form class="navbar-form navbar-left">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="搜索问题" name="search">
+                            <input type="text" class="form-control wrap" placeholder="搜索问题" name="search">
                         </div>
-                        <button type="submit" class="btn btn-default">搜索</button>
+                        <button type="submit" class="btn btn-default wrap">搜索</button>
                     </form>
                     <ul class="nav navbar-nav">
                         <script>
@@ -42,25 +42,29 @@
                             }
                         </script>
                         <li th:each="ad : ${#httpServletRequest.getServletContext().getAttribute('NAV')}">
-                            <a th:href="${ad.url}" th:text="${ad.title}" th:onclick="clickNav([[${ad.title}]])"
+                            <a th:href="${ad.url}" th:text="${ad.title}" th:onclick="clickNav(${ad.title})"
                                target="_blank"></a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li th:if="${session.user != null&&#httpServletRequest.getRequestURI()!='/publish'}">
-                            <a href="/publish">提问</a>
+                            <a href="/publish">
+                                <span th:text="提问" class="wrap"></span>
+                            </a>
                         </li>
                         <li>
-                            <a href="/profile/replies" class="wrap">通知 <span class="badge"
-                                                                             th:if="${session.user != null}"
-                                                                             th:text="${session.unreadCount}"></span></a>
+                            <a href="/profile/replies">
+                                <span th:text="通知" class="wrap"></span>
+                                <span class="badge wrap"
+                                      th:if="${session.user != null}"
+                                      th:text="${session.unreadCount}"></span></a>
                         </li>
                         <li class="dropdown" th:if="${session.user != null}">
 
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true"
                                aria-expanded="false">
-                                <span th:text="${session.user.getName()}"></span>
+                                <span th:text="${session.user.getName()}" class="wrap"></span>
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
